--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "plagiarism",
+  "name": "@mpan-wework/plagiarism",
   "version": "0.1.0",
-  "private": true,
+  "description": "Plagiarism site",
+  "author": {
+    "name": "mpan-wework",
+    "email": "mike.pan@wework.com",
+    "url": "https://mpan-wework.github.io"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mpan-wework/plagiarism.git",
+    "directory": "/"
+  },
+  "license": "MIT",
   "scripts": {
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
