--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "eslint": "eslint src --ext .ts,.vue"
   },
   "dependencies": {
     "core-js": "^3.6.4",
