--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "eslint": "eslint src --ext .ts,.vue"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "core-js": "^3.6.4",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -40,6 +42,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
